--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Omrails</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+		<head>
+		  <title>Bunch of stuff.</title>
+		  <%= stylesheet_link_tag    "application", :media => "all" %>
+		  <%= javascript_include_tag "application" %>
+		  <%= csrf_meta_tags %>
+		</head>
+		<body>
+	<%= render 'layouts/header' %> 
+		<div class="container">
+		<%= yield %>
 
-<%= yield %>
 
-</body>
-</html>
+	<%= render 'layouts/footer' %> 
+
+	</body>
+	</html>
